ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
    - host: calculadora.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: frontend
                port: 
                  number: 80
    - host: backend.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
